# eds/internal/api/tokenpool/parse.go
@@ -2,9 +2,9 @@ package tokenpool
 
 import (
 	"fmt"
-	"math/big"
 
 	apiv2 "github.com/digital-asset/dazl-client/v8/go/api/com/daml/ledger/api/v2"
+
 	"github.com/smartcontractkit/go-daml/pkg/service/ledger"
 	"github.com/smartcontractkit/go-daml/pkg/types"
 
@@ -12,6 +12,7 @@ import (
 	"github.com/smartcontractkit/chainlink-canton/bindings/generated/ccip/lockreleasetokenpool"
 	"github.com/smartcontractkit/chainlink-canton/bindings/generated/splice/splice_api_token_holding_v1"
 	"github.com/smartcontractkit/chainlink-canton/contracts"
+	"github.com/smartcontractkit/chainlink-canton/eds/internal/api/parse"
 )
 
 type RemoteChainConfig struct {
@@ -40,20 +41,15 @@ func ParseLockReleaseTokenPool(createdEvent *apiv2.CreatedEvent) (*LockReleaseTo
 
 	remoteChainConfigs := make(map[uint64]RemoteChainConfig, len(boundContract.RemoteChainConfigs))
 	for chainSelectorString, remoteChainConfigAny := range boundContract.RemoteChainConfigs {
-		parsedSelector, ok := new(big.Rat).SetString(chainSelectorString)
-		if !ok {
-			return nil, fmt.Errorf("failed to parse chain selector %q", chainSelectorString)
+		chainSelector, err := parse.Uint64Checked(chainSelectorString)
+		if err != nil {
+			return nil, fmt.Errorf("invalid chain selector %q: %w", chainSelectorString, err)
 		}
-		if !parsedSelector.IsInt() {
-			return nil, fmt.Errorf("chain selector %q is not an integer", chainSelectorString)
-		}
-		chainSelector := parsedSelector.Num().Uint64()
 
 		remoteChainConfigMap, ok := remoteChainConfigAny.(map[string]any)
 		if !ok {
 			return nil, fmt.Errorf("remote chain config for chain selector %d is not a map", chainSelector)
 		}
-		// unmarshal the remote chain config using ledger.MapToStruct
 		var remoteChainConfig lockreleasetokenpool.RemoteChainConfig
 		err = ledger.MapToStruct(remoteChainConfigMap, &remoteChainConfig)
 		if err != nil {
@@ -61,35 +57,27 @@ func ParseLockReleaseTokenPool(createdEvent *apiv2.CreatedEvent) (*LockReleaseTo
 		}
 
 		// Rate Limiters
-		inboundRateLimiter, err := contracts.RawInstanceAddressFromString(string(remoteChainConfig.InboundRateLimiter.Unpack))
+		inboundRateLimiter, err := parse.RawInstanceAddress(remoteChainConfig.InboundRateLimiter)
 		if err != nil {
 			return nil, fmt.Errorf("invalid inbound rate limiter for remote chain selector %d: %w", chainSelector, err)
 		}
-		inboundCustomBlockConfirmationsRateLimiter, err := contracts.RawInstanceAddressFromString(string(remoteChainConfig.InboundCustomBlockConfirmationsRateLimiter.Unpack))
+		inboundCustomBlockConfirmationsRateLimiter, err := parse.RawInstanceAddress(remoteChainConfig.InboundCustomBlockConfirmationsRateLimiter)
 		if err != nil {
 			return nil, fmt.Errorf("invalid inbound custom block confirmations rate limiter for remote chain selector %d: %w", chainSelector, err)
 		}
-		outboundRateLimiter, err := contracts.RawInstanceAddressFromString(string(remoteChainConfig.OutboundRateLimiter.Unpack))
+		outboundRateLimiter, err := parse.RawInstanceAddress(remoteChainConfig.OutboundRateLimiter)
 		if err != nil {
 			return nil, fmt.Errorf("invalid outbound rate limiter for remote chain selector %d: %w", chainSelector, err)
 		}
 
 		// CCVs
-		inboundCCVs := make([]contracts.RawInstanceAddress, len(remoteChainConfig.InboundCCVs))
-		for i, inboundCCV := range remoteChainConfig.InboundCCVs {
-			inboundCCVAddress, err := contracts.RawInstanceAddressFromString(string(inboundCCV.Unpack))
-			if err != nil {
-				return nil, fmt.Errorf("invalid inbound CCV at index %d for remote chain selector %d: %w", i, chainSelector, err)
-			}
-			inboundCCVs[i] = inboundCCVAddress
+		inboundCCVs, err := parse.RawInstanceAddressList(remoteChainConfig.InboundCCVs)
+		if err != nil {
+			return nil, fmt.Errorf("invalid inbound CCVs for remote chain selector %d: %w", chainSelector, err)
 		}
-		outboundCCVs := make([]contracts.RawInstanceAddress, len(remoteChainConfig.OutboundCCVs))
-		for i, outboundCCV := range remoteChainConfig.OutboundCCVs {
-			outboundCCVAddress, err := contracts.RawInstanceAddressFromString(string(outboundCCV.Unpack))
-			if err != nil {
-				return nil, fmt.Errorf("invalid outbound CCV at index %d for remote chain selector %d: %w", i, chainSelector, err)
-			}
-			outboundCCVs[i] = outboundCCVAddress
+		outboundCCVs, err := parse.RawInstanceAddressList(remoteChainConfig.OutboundCCVs)
+		if err != nil {
+			return nil, fmt.Errorf("invalid outbound CCVs for remote chain selector %d: %w", chainSelector, err)
 		}
 
 		remoteChainConfigs[chainSelector] = RemoteChainConfig{
