# eds/internal/api/tokenpool/token_standard.go
@@ -2,23 +2,22 @@ package tokenpool
 
 import (
 	"context"
-	"encoding/base64"
 	"fmt"
 	"net/http"
 	"time"
 
-	apiv2 "github.com/digital-asset/dazl-client/v8/go/api/com/daml/ledger/api/v2"
 	"github.com/smartcontractkit/go-daml/pkg/types"
 
 	"github.com/smartcontractkit/chainlink-canton/bindings/generated/splice/splice_api_token_holding_v1"
 	"github.com/smartcontractkit/chainlink-canton/commonconfig"
-	"github.com/smartcontractkit/chainlink-canton/contracts"
+	oapiCommon "github.com/smartcontractkit/chainlink-canton/openapi/gen/eds/common"
 	"github.com/smartcontractkit/chainlink-canton/openapi/gen/transferInstructionV1"
 )
 
-type transferFactory func(ctx context.Context, instrumentId splice_api_token_holding_v1.InstrumentId) (types.CONTRACT_ID, map[string]any, []*apiv2.DisclosedContract, error)
+type transferFactory func(ctx context.Context, instrumentId splice_api_token_holding_v1.InstrumentId) (string, map[string]any, []oapiCommon.DisclosedContract, error)
 
 func getTransferFactory(ctx context.Context, url string, auth *commonconfig.AuthConfig, poolOwner types.PARTY) (transferFactory, error) {
+	// If authentication has been configured, add an interceptor that adds the Authorization header
 	var options []transferInstructionV1.ClientOption
 	if auth != nil {
 		authProvider, err := auth.NewProvider(ctx)
@@ -44,7 +43,7 @@ func getTransferFactory(ctx context.Context, url string, auth *commonconfig.Auth
 		return nil, fmt.Errorf("failed to create TransferInstructionV1 client with URL %q: %w", url, err)
 	}
 
-	return func(ctx context.Context, instrumentId splice_api_token_holding_v1.InstrumentId) (types.CONTRACT_ID, map[string]any, []*apiv2.DisclosedContract, error) {
+	return func(ctx context.Context, instrumentId splice_api_token_holding_v1.InstrumentId) (string, map[string]any, []oapiCommon.DisclosedContract, error) {
 		resp, err := transferInstructionClient.GetTransferFactoryWithResponse(ctx, transferInstructionV1.GetFactoryRequest{
 			ChoiceArguments: map[string]any{
 				"expectedAdmin": instrumentId.Admin,
@@ -82,25 +81,16 @@ func getTransferFactory(ctx context.Context, url string, auth *commonconfig.Auth
 			return "", nil, nil, fmt.Errorf("unexpected status code: %d; response: %s", resp.StatusCode(), string(resp.Body))
 		}
 
-		disclosedContracts := make([]*apiv2.DisclosedContract, len(resp.JSON200.ChoiceContext.DisclosedContracts))
+		disclosedContracts := make([]oapiCommon.DisclosedContract, len(resp.JSON200.ChoiceContext.DisclosedContracts))
 		for i, contract := range resp.JSON200.ChoiceContext.DisclosedContracts {
-			templateId, err := contracts.TemplateIDFromString(contract.TemplateId)
-			if err != nil {
-				return "", nil, nil, fmt.Errorf("failed to parse template id: %w", err)
-			}
-
-			createdEventBlob, err := base64.StdEncoding.DecodeString(contract.CreatedEventBlob)
-			if err != nil {
-				return "", nil, nil, fmt.Errorf("failed to decode created event blob: %w", err)
-			}
-			disclosedContracts[i] = &apiv2.DisclosedContract{
-				TemplateId:       templateId.ToLedgerIdentifier(),
+			disclosedContracts[i] = oapiCommon.DisclosedContract{
+				TemplateId:       contract.TemplateId,
 				ContractId:       contract.ContractId,
-				CreatedEventBlob: createdEventBlob,
+				CreatedEventBlob: contract.CreatedEventBlob,
 				SynchronizerId:   contract.SynchronizerId,
 			}
 		}
 
-		return types.CONTRACT_ID(resp.JSON200.FactoryId), resp.JSON200.ChoiceContext.ChoiceContextData, disclosedContracts, nil
+		return resp.JSON200.FactoryId, resp.JSON200.ChoiceContext.ChoiceContextData, disclosedContracts, nil
 	}, nil
 }
